<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/txtSignup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tv_user_name"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtSignup"
        />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        app:layout_constraintLeft_toRightOf="@id/tv_user_name"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_user_name"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pw"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        />


    <EditText
        android:id="@+id/et_pw"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/pw"
        app:layout_constraintLeft_toRightOf="@id/tv_pw"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_pw"
        />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/color8"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textColor="@color/color0"
        app:layout_constraintRight_toRightOf="@id/et_pw"
        app:layout_constraintTop_toBottomOf="@id/et_pw" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_in_via_fb"
        android:text="@string/sign_in_via_fb"
        android:textSize="18sp"
        android:textColor="@color/color0"
        android:backgroundTint="@color/color8"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_up"
        android:text="@string/signup"
        android:textSize="18sp"
        android:textColor="@color/color0"
        android:backgroundTint="@color/color8"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>