<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tv_user_name"
        android:layout_below="@+id/tv_sign_in"
        android:textSize="18dp"
        android:layout_alignParentLeft="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:hint="name@gmail.com"
        android:layout_alignTop="@+id/tv_user_name"
        android:layout_toRightOf="@+id/tv_user_name"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tv_password"
        android:hint="******"
        android:textSize="18dp"
        android:layout_below="@+id/et_username"
        android:layout_alignParentLeft="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:password="true"
        android:layout_alignTop="@+id/tv_password"
        android:layout_toRightOf="@+id/tv_password"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:id="@+id/btn_sign_in"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/et_password"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/color8"
        android:textColor="@color/color0"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_via_fb"
        android:textSize="18sp"
        android:textColor="@color/color0"
        android:backgroundTint="@color/color8"
        android:layout_above="@+id/btn_sign_up"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_up"
        android:text="@string/signup"
        android:textSize="18sp"
        android:textColor="@color/color0"
        android:backgroundTint="@color/color8"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"/>
</RelativeLayout>